GNOME Bugzilla – Bug 707264
Fix build of gi/pygi-closure.c on C89 compilers
Last modified: 2013-09-02 07:38:51 UTC
Created attachment 253803 [details] Avoid variable declarations in the middle of the block Hi, As we were checking whether _pygi_argument_from_object had error(s) occuring (commit ec3de760), this made a variable declaration go into the middle of the block, which made C89 compilers complaining. This simple patch addresses this. With blessings, thank you!
Created attachment 253804 [details] [review] Avoid variable declarations in the middle of the block
Thanks! Pushed.