Fix build on C89 Compilers

Avoid a variable declaration at the middle of the block

https://bugzilla.gnome.org/show_bug.cgi?id=707264